# trackers

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  mypy.ini  pyproject.toml  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: publish-docs.yml  publish-pre-release.yml  publish-release.yml  test-doc.yml  uv-test.yml
My Modification/: README.md  environment.yml  main.py
docs/: index.md
docs/overrides/partials/: comments.html
docs/overrides/stylesheets/: style.css
docs/trackers/core/: sort_tracker.md
docs/trackers/core/deepsort/: tracker.md
docs/trackers/core/sort/: tracker.md
docs/trackers/utils/: sort_utils.md
trackers/: __init__.py  log.py  sort_tracker.py
trackers/core/: base.py
trackers/core/deepsort/: feature_extractor.py  kalman_box_tracker.py  tracker.py
trackers/core/sort/: kalman_box_tracker.py  tracker.py
trackers/utils/: __init__.py  sort_utils.py  torch_utils.py
